--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
 
         <div class="separator"></div>
-        
+
         <div class="video-section">
             <h2>Chủ đề: Robot Cứu Hỏa Khẩn Cấp</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/abPmZCZZrFA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -36,7 +36,7 @@
         <div class="separator"></div>
 
         <div class="timeline-section">
-            <h2>Lịch trình</h2>
+            <h2>Timeline</h2>
             <div class="timeline-item">
                 <p><span>01/01/2024:</span> Đăng ký tham gia cuộc thi</p>
             </div>
@@ -56,15 +56,15 @@
         <div class="document-section">
             <h2>Tài liệu hướng dẫn</h2>
             <div class="document-item">
-                <a href="your_document_link_1" download>Tài liệu hướng dẫn 1</a>
+                <a href="your_document_link_1" download>Luật thi</a>
                 <span>Cập nhật ngày: 01/01/2024</span>
             </div>
             <div class="document-item">
-                <a href="your_document_link_2" download>Tài liệu hướng dẫn 2</a>
+                <a href="your_document_link_2" download>API Code</a>
                 <span>Cập nhật ngày: 15/02/2024</span>
             </div>
             <div class="document-item">
-                <a href="your_document_link_3" download>Tài liệu hướng dẫn 3</a>
+                <a href="your_document_link_3" download>Setup Leanbot</a>
                 <span>Cập nhật ngày: 20/03/2024</span>
             </div>
         </div>
@@ -78,7 +78,7 @@
                 <p>Facebook: <a href="https://facebook.com/CLBDienTuPTIT" target="_blank">facebook.com/CLBDienTuPTIT</a></p>
             </div>
             <div class="logo">
-                <p>&copy; CLB Điện Tử PTIT</p>
+                <p>&copy; CLB Điện Tử PTIT - Điện Tử PTIT Kiến Tạo Đam Mê</p>
             </div>
         </footer>
     </div>
