--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p><span>20/03/2024:</span> Vòng chung kết</p>
             </div>
             <div class="timeline-item">
-                <strong>Cập nhật ngày: 01/01/2024</strong>
+                <strong>Cập nhật: 01/01/2024</strong>
             </div>
         </div>
 
@@ -57,15 +57,15 @@
             <h2>Tài liệu hướng dẫn</h2>
             <div class="document-item">
                 <a href="your_document_link_1" download>Luật thi</a>
-                <span>Cập nhật ngày: 01/01/2024</span>
+                <span>Cập nhật: 01/01/2024</span>
             </div>
             <div class="document-item">
                 <a href="your_document_link_2" download>API Code</a>
-                <span>Cập nhật ngày: 15/02/2024</span>
+                <span>Cập nhật: 15/02/2024</span>
             </div>
             <div class="document-item">
                 <a href="your_document_link_3" download>Setup Leanbot</a>
-                <span>Cập nhật ngày: 20/03/2024</span>
+                <span>Cập nhật: 20/03/2024</span>
             </div>
         </div>
 
