--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="separator"></div>
 
         <div class="video-section">
-            <h2>Chủ đề: Robot Cứu Hỏa Khẩn Cấp</h2>
+            <h2>Theme: Robot Cứu Hỏa Khẩn Cấp</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/abPmZCZZrFA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         
@@ -53,7 +53,7 @@
             </div>
         
             <div class="document-section">
-                <h2>Tài liệu hướng dẫn</h2>
+                <h2>Documents</h2>
                 <div class="document-item">
                     <a href="your_document_link_1" download>Luật thi</a>
                     <span>Cập nhật: 01/01/2024</span>
