--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="timeline-section">
                 <h2>Timeline</h2>
                 <div class="timeline-item">
-                    <p><span>01/01/2024:</span> Đăng ký tham gia cuộc thi</p>
+                    <p><span>20/8 - 15/09/2024:</span> Đăng ký tham gia cuộc thi</p>
                 </div>
                 <div class="timeline-item">
                     <p><span>15/02/2024:</span> Vòng loại</p>
