--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="separator"></div>
 
         <div class="video-section">
-            <h2>THEME: Robot Cứu Hỏa Khẩn Cấp</h2>
+            <h2>THEME: Cứu Hỏa Khẩn Cấp</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/abPmZCZZrFA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         
