--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             <div class="timeline-section">
                 <h2>TIMELINE</h2>
                 <div class="timeline-item">
-                    <p><span>20/8 - 15/09/2024:</span> Đăng ký tham gia cuộc thi</p>
+                    <p><span>01/9 - 15/09/2024:</span> Đăng ký tham gia cuộc thi</p>
                 </div>
                 <div class="timeline-item">
-                    <p><span>20/09/2024:</span> Vòng loại</p>
+                    <p><span>28-29/09/2024:</span> Vòng loại</p>
                 </div>
                 <div class="timeline-item">
-                    <p><span>01/10/2024:</span> Vòng chung kết</p>
+                    <p><span>05/10/2024:</span> Vòng chung kết</p>
                 </div>
                 <div class="timeline-item">
                     <strong>Cập nhật: Dự kiến</strong>
