--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                     <span>Cập nhật: yy/yy/2024</span>
                 </div>
                 <div class="document-item">
-                    <a href="your_document_link_2" download>API Code</a>
+                    <a href="your_document_link_3" download>Setup Leanbot IDE</a>
                     <span>Cập nhật: yy/yy/2024</span>
                 </div>
                 <div class="document-item">
-                    <a href="your_document_link_3" download>Setup Leanbot</a>
+                    <a href="your_document_link_2" download>API Code</a>
                     <span>Cập nhật: yy/yy/2024</span>
                 </div>
             </div>
