--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="timeline-section">
                 <h2>TIMELINE</h2>
                 <div class="timeline-item">
-                    <p><span>01/9 - 15/09/2024:</span> Đăng ký tham gia cuộc thi</p>
+                    <p><span>01/9 - 15/09/2024:</span>Link đăng ký tham gia</p>
                 </div>
                 <div class="timeline-item">
                     <p><span>28-29/09/2024:</span> Vòng loại</p>
