--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="document-section">
                 <h2>DOCUMENTS</h2>
                 <div class="document-item">
-                    <a href="your_document_link_1" download>Luật thi</a>
+                    <a href="https://drive.google.com/file/d/122OTMPRFRpV1mHuq_GkZbZYadfIRm8-x/view?usp=sharing" download>Luật thi</a>
                     <span>Cập nhật: yy/yy/2024</span>
                 </div>
                 <div class="document-item">
