--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <span>Cập nhật: yy/yy/2024</span>
                 </div>
                 <div class="document-item">
-                    <a href="your_document_link_3" download>Setup Leanbot IDE</a>
+                    <a href="https://docs.google.com/document/d/1yLnr4bMtJr5y67UsYT4vOnz9Ymandxp_2js6Udu6lYc/edit" download>Setup Leanbot IDE</a>
                     <span>Cập nhật: yy/yy/2024</span>
                 </div>
                 <div class="document-item">
